[package]
name = "uri_parser"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "URI Parser is a pest-based parser that breaks URIs into structured components."


[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
pest = "2.7.14"
pest_derive = "2.7.14"
thiserror = "1.0.69"
