[package]
name = "uri_parser_gdv"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "URI Parser is a pest-based parser that breaks URIs into structured components."
homepage = "https://github.com/greedy-dev/uri_parser_gdv"
repository = "https://github.com/greedy-dev/uri_parser_gdv"
readme = "README.md"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
pest = "2.7.14"
pest_derive = "2.7.14"
thiserror = "1.0.69"
